...
                android:id="@+id/lblEmpty"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/empty_list"/>
            <Spinner
                android:id="@+id/spStores"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/store_select_prompt"
                android:textColor="@color/Black"
                android:minEms="50"
                android:maxEms="50"

                />
            </RelativeLayout>

        <Button
            android:text="@string/ChangeStore"
            android:id="@+id/btnSaveStoreSettings"
            android:background="@color/DarkCyan"
            android:textColor="@color/White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right">

...
