<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="ru.crystals.vaverjanov.dreamkas.view.LighthouseDemoActivity">

...
        </LinearLayout>




    <!--android:focusable="false"-->
    <ListView android:id="@+id/lstDrawer"
        android:focusable="false"
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:dividerHeight="0dp"
...
