<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dreamkas</string>
    <string name="hello_world">Success</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_lighhouse_demo">LighhouseDemoActivity</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="drawer_open">Open navigation drawer</string>

    <string name="drawer_close">Close navigation drawer</string>

    <string name="hello_kas_fragment">Касса</string>
    <string name="hello_store_fragment">Магазин</string>
    <string name="drawer_title">Меню</string>
    <string name="dream_kas_title">Dreamkas</string>
    <string name="exitDialogTitle">Подтверждение</string>
    <string name="exitDialogMsg">Вы уверены, что хотите выйти?</string>
    <string name="Yes">Да</string>
    <string name="No">Нет</string>
    <string name="store_select_label">Магазин</string>
    <string name="store_select_prompt">Выберите магазин</string>
    <string name="Save">Сохранить</string>
    <string name="ChangeStore">Перейти к кассе</string>
    <string name="current_store_id">current_store_id</string>
    <string name="auth_dialog_title">Авторизация...</string>
    <string name="error_bad_credentials">Неверный логин или пароль</string>
    <string name="error_empty_field">Поле должно быть заполнено</string>
    <string name="load_stores">Загрузка магазинов...</string>
    <string name="empty_list">Список пуст</string>
    <string name="error_unauthorized">Ошибка авторизации</string>
    <string name="error_open_kas_without_store">Для начала работы с кассой необходимо выбрать магазин, в котором она находится.</string>
    <string name="title_change_current_store">Смена магазина</string>
    <string name="msgSearchReq">Для поиска товара введите 3 или более символа.</string>
    <string name="msgEmptyReceipt">Для продажи добавьте в чек хотя бы один продукт.</string>
    <string name="msgSearchEmptyResult">Продуктов не найдено.</string>
    <string name="ClearReceipt">Очистить чек</string>
    <string name="msgClearReceiptConfitmationText">Подтвердить очистку чека</string>
    <string name="msgSellInTheAmountOff">ОПЛАТИТЬ %1$s %2$c</string>
    <string name="msg_info_ruble_value">%1$s %2$c</string>
    <string name="msg_info_change_from">Сдача с %1$s</string>
    <string name="msgSelectedNullStore">\u003CМагазин не выбран\u003E</string>

    <string name="msg_error_negative_value">Значение не должно быть меньше нуля</string>
    <string name="msg_error_zero_value">Значение не должно быть равно нулю</string>
    <string name="msg_error_empty_value">Поле должно быть заполнено</string>
    <string name="msg_error_wrong_format">Неверный формат</string>

    <string name="navigation_drawer_open">OPEN</string>
    <string name="navigation_drawer_close">CLOSE</string>



</resources>
